--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,5 @@
 ---
 applications:
- - name: Helloworldlol
-   random-route: true
-   memory: 128M
+- name: GetStartedRuby
+  random-route: true
+  memory: 256M
